tests/rosetta/out/Java/call-an-object-method.error
javac error: exit status 1
/tmp/TestMochiToJavacall-an-object-method442456232/001/CallAnObjectMethod.java:28: error: cannot find symbol
    box.TellSecret();
       ^
  symbol:   method TellSecret()
  location: variable box of type Box
1 error
